tests/ui/track-diagnostics/track6.stderr
error[E0658]: specialization is unstable
  --> $DIR/track6.rs:11:5
   |
LL |     default fn bar() {}
   |     ^^^^^^^^^^^^^^^^^^^
-Ztrack-diagnostics: created at $COMPILER_DIR/crablangc_session/src/parse.rs:93:5
   |
   = note: see issue #31844 <https://github.com/crablang/crablang/issues/31844> for more information
   = help: add `#![feature(specialization)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
